# btor2tools

./: CMakeLists.txt  setup-deps.sh
src/: CMakeLists.txt  btor2aiger.cpp  btor2aiger.h  btor2aiger_main.cpp
